--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -30,6 +30,6 @@ android {
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
 
-    implementation project(':creditcardview')
+    implementation project(':credit-card-view')
     implementation 'androidx.appcompat:appcompat:1.0.2'
 }
